--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
    </header>
    <main> 
     <h1 style="color: rgb(255, 0, 0); font-size: 60px;">tente não rir com o crash bandicot</h1>
-    <img src="https://www.tudodesenhos.com/uploads/tags/685/thumb_crash.jpg" alt="" width="400px" height="400px">
-    <button style="background-color: black; color: blanchedalmond;">aperte aqui para voltar comigo</button>
+    <img src="https://www.tudodesenhos.com/uploads/tags/685/thumb_crash.jpg" alt="" width="400px" height="400px"
    </main>
    <footer> 
     <P style="color: black; font-size: 40px;">   PERDEU!!! </P>
