--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    </header>
    <main> 
     <h1 style="color: rgb(255, 0, 0); font-size: 60px;">tente não rir com o crash bandicot</h1>
-    <img src="file:///C:/Users/walle/Pictures/figurinha.webp" alt="" width="400px" height="400px"
+    <img src="imagem_2022-01-30_160737.jpg" alt="" width="400px" height="400px"
    </main>
    <footer> 
     <P style="color: black; font-size: 40px;">   PERDEU!!! </P>
